# bigquery-sap-synthetic-data

./: .gitignore  ACDOCA-table-structure.xlsx  README-WORKFLOW.md  README.md  SPEC-ACDOCA-Synthetic-Generator.md  app.yaml  databricks.yml  pyproject.toml  requirements-app.txt  requirements-viz.txt  requirements.txt
.github/workflows/: ci-spark.yml  ci.yml
acdoca_generator/: __init__.py  app.py  spark_bridge.py
acdoca_generator/aggregations/: __init__.py  entity_roles.py  segment_pl.py
acdoca_generator/config/: __init__.py  _field_descriptions_generated.py  _field_specs_generated.py  chart_of_accounts.py  countries.py  field_tiers.py  functional_areas.py  industries.py  materials.py  operating_models.py  presets.py  supply_chain_templates.py  tp_methods.py
acdoca_generator/core/: __init__.py  companies_polars.py  domestic_polars.py
acdoca_generator/dash_app/: __init__.py  app.py  callbacks.py  graph.py  layout.py
acdoca_generator/generators/: __init__.py  amounts.py  closing.py  document.py  intercompany.py  master_data.py  pipeline.py  supply_chain.py  transactions.py  year_end_trueup.py
acdoca_generator/tests/: conftest.py  test_balance.py  test_bq_write_canary.py  test_controversy.py  test_domestic_polars.py  test_entity_roles.py  test_ic_pairing.py  (+14 more)
diagnostics/: sc-realism-2026-04-27.md
docs/: runtime-options.md
notebooks/: 00_bq_setup.sql  00_uc_setup.sql  01_generate_acdoca.py  01_generate_acdoca_bq.py  02_generate_acdoca_bq_studio.ipynb  02_run_streamlit.py
scripts/: build_bq_studio_notebook.py  build_field_descriptions.py  complete_github_ssh.sh  dev_smoke_supply_chain.py  provision_vertex_workbench.sh  run_generate_bq.py
(+5 files in other folders)
