[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "acdoca-generator"
version = "1.0.0"
description = "Synthetic SAP ACDOCA journal generator for Google BigQuery (Spark connector), local PySpark (Delta/Parquet), and optional Polars fast path"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyspark>=3.5.0,<4",
  "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pandas>=2.0.0", "setuptools>=69.0.0"]
fast = ["polars>=1.0.0", "pandas>=2.0.0"]
viz = [
  "dash>=2.14.0",
  "plotly>=5.18.0",
  "dash-cytoscape>=1.0.0",
  "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["acdoca_generator*"]

[tool.pytest.ini_options]
testpaths = ["acdoca_generator/tests"]
pythonpath = ["."]
markers = [
    "spark: needs Java and PySpark (heavy integration tests)",
]
